--- a/index.html
+++ b/index.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Superhero Database</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <h1>Superhero Database</h1>
     <div id="controls">
-        <input type="text" id="search" placeholder="Search by name...">
-        <select id="pageSize">
-            <option value="10">10 per page</option>
-            <option value="20" selected>20 per page</option>
-            <option value="50">50 per page</option>
-            <option value="100">100 per page</option>
-            <option value="all">All results</option>
-        </select>
+      <input type="text" id="search" placeholder="Search by name..." />
+      <select id="pageSize">
+        <option value="10">10 per page</option>
+        <option value="20" selected>20 per page</option>
+        <option value="50">50 per page</option>
+        <option value="100">100 per page</option>
+        <option value="all">All results</option>
+      </select>
     </div>
     <table id="heroTable">
-        <thead>
-            <tr>
-                <th>Icon</th>
-                <th>Name</th>
-                <th>Full Name</th>
-                <th>Intelligence</th>
-                <th>Strength</th>
-                <th>Speed</th>
-                <th>Durability</th>
-                <th>Power</th>
-                <th>Combat</th>
-                <th>Race</th>
-                <th>Gender</th>
-                <th>Height</th>
-                <th>Weight</th>
-                <th>Place of Birth</th>
-                <th>Alignment</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
+      <thead>
+        <tr>
+          <th>Icon</th>
+          <th>Name</th>
+          <th>Full Name</th>
+          <th>Intelligence</th>
+          <th>Strength</th>
+          <th>Speed</th>
+          <th>Durability</th>
+          <th>Power</th>
+          <th>Combat</th>
+          <th>Race</th>
+          <th>Gender</th>
+          <th>Height</th>
+          <th>Weight</th>
+          <th>Place of Birth</th>
+          <th>Alignment</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
     </table>
     <div id="pagination"></div>
 
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
